tests/paczka2/big_fuzzy/79804712.err
Error in line 1: kItD A213 26,8
Error in line 4: kItD S635 37,8
Error in line 2: TiS4wO5zMg0 S635 81,4
Error in line 16: TiS4wO5zMg0 A533 12,7
Error in line 8: c6lB1tdVI S635 96,6
Error in line 20: kItD A533 2,8
Error in line 32: kItD S635 94,6
Error in line 34: E6XuF2XTx A533 72,51
Error in line 14: h6QY6Sclc S635 87,1
Error in line 40: kItD A213 68,4
Error in line 47: TiS4wO5zMg0 S635 55,1
Error in line 55: E6XuF2XTx A533 119,9
Error in line 68: UkVZ A213 63,3
Error in line 80: h6QY6Sclc A213 76,7
Error in line 88: c6lB1tdVI A533 97,8
Error in line 76: UkVZ S635 10,5
Error in line 93: kItD S605 82,6
Error in line 106: S605 A533 63,9
Error in line 114: kItD A533 6,9
Error in line 104: h6QY6Sclc S635 155,9
Error in line 117: c6lB1tdVI A213 17,9
Error in line 118: kItD A213 17,7
Error in line 121: h6QY6Sclc A533 27,3
Error in line 151: c6lB1tdVI A213 19,4
Error in line 157: E6XuF2XTx A533 0,5
Error in line 159: S605 S605 17,4
Error in line 175: kItD S635 38,7
Error in line 173: S605 S635 58,4
Error in line 190: kItD S605 88,08
Error in line 172: h6QY6Sclc S605 405,5
Error in line 196: c6lB1tdVI S605 2,2
Error in line 207: h6QY6Sclc A533 39,6
Error in line 209: h6QY6Sclc A213 30,6
Error in line 215: S605 S605 44,5
Error in line 219: TiS4wO5zMg0 A213 40,1
Error in line 225: UkVZ S635 9,9
Error in line 235: kItD A213 65,2
Error in line 228: h6QY6Sclc S635 61,2
Error in line 237: E6XuF2XTx S635 74,4
